deploy/apps/kartograph/overlays/stage/resources-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kartograph-api
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: api
  template:
    spec:
      containers:
        - name: api
          resources:
            requests:
              cpu: 200m
              memory: 2Gi
            limits:
              cpu: 2000m
              memory: 6Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kartograph-postgres
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: database
  template:
    spec:
      containers:
        - name: postgres
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: 2000m
              memory: 4Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kartograph-dev-ui
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: dev-ui
  template:
    spec:
      containers:
        - name: dev-ui
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
