deploy/apps/kartograph/overlays/stage/dev-ui-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kartograph-dev-ui
spec:
  to:
    kind: Service
    name: kartograph-dev-ui
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
